--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,10 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
 
     compile 'com.jakewharton.timber:timber:4.3.1'
 
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
 }
