--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
 
         <activity android:name=".ui.album.AlbumActivity" />
+        <activity android:name=".ui.slideshow.SlideShowActivity" />
     </application>
 
 </manifest>
