--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name=".PhotoLibraryApplication">
-        <activity android:name=".ui.home.HomeActivity" >
+        <activity android:name=".ui.home.HomeActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,8 +22,12 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.album.AlbumActivity" />
-        <activity android:name=".ui.slideshow.SlideShowActivity" />
+        <activity android:name=".ui.album.AlbumActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.slideshow.SlideShowActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
